# dlbird

./: DATASET_SETUP.md  README.md  download_datasets.py  example_usage.py  kaggle.json  main.py  pyproject.toml  requirements.txt
experiments/: ssw60.ipynb
