[project]
name = "dlbird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deeplake<4",
    "ipywidgets>=8.1.8",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
